@@ -609,6 +609,23 @@ argument_list|,
 literal|2
 argument_list|)
 expr_stmt|;
+name|conf
+operator|.
+name|setClass
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_SCHEDULER
+argument_list|,
+name|CapacityScheduler
+operator|.
+name|class
+argument_list|,
+name|ResourceScheduler
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
 name|MockRM
 name|rm1
 init|=
